inicio de la barra de navegacion, y baner de tortuguita

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blablabla</title>
+    <title>Porfolio Olivia *·˚</title>
+    <link rel="stylesheet" href="./styles.css"
 </head>
 <body>
-    <h1></h1>
-    
+    <head> 
+        <nav>
+            <ul class="__nav">
+                <li class="__nav-item">
+                    <a href="#">Home</a> 
+                </li>
+                <li class="__nav-item">
+                    <a href="#">Blog</a> 
+                </li>
+                <li class="__nav-item">
+                    <a href="#">Contacto</a> 
+                </li>
+            </ul>
+        </nav>
+
+        <main>
+            <section>
+                <figure class="la-tortuguita">
+                    <img src="./img's/tortuguita (2).jpg">
+                </figure>
+            </section>
+        </main>
+    </head>
 </body>
 </html>
