Algunos arreglos, e instale angular

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -292,6 +292,25 @@
             <circle class="circle3" cx="80" cy="80" r="70" stroke-linecap="round"/>
           </svg>
         </div>
+
+        <div class="skill offset-2">
+          <div class="outer">
+            <div class="inner">
+              <div id="number">
+                20%
+              </div>
+            </div>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+            <defs>
+               <linearGradient id="GradientColor">
+                  <stop offset="0%" stop-color="#e6bfb2" />
+                  <stop offset="100%" stop-color="#ede9e3 " />
+               </linearGradient>
+            </defs>
+            <circle class="circle2 " cx="80" cy="80" r="70" stroke-linecap="round"/>
+          </svg>
+        </div>
   
 </section>        
     <!-- //Skill-->
@@ -331,26 +350,6 @@
     </footer>
     <!-- /footer -->
 
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, cumque. Dicta dolorum voluptates iusto mollitia commodi iste itaque magni laborum eveniet magnam maxime cupiditate repellendus consequatur accusantium suscipit, quasi provident.
-    Doloremque commodi inventore quaerat corrupti nostrum quia voluptatum numquam officiis cupiditate nihil mollitia laborum facilis, sunt neque aperiam natus ut ipsa quisquam autem totam, amet qui assumenda possimus. Architecto, temporibus.
-    Ipsam rem quae quibusdam tempora ab cupiditate sit corrupti repellendus hic ullam voluptate repudiandae, laboriosam repellat ducimus nisi debitis illum voluptatum pariatur? Consequuntur aliquid possimus assumenda earum nisi nemo alias.
-    Corporis magni quod molestias ipsa vel, soluta quam reprehenderit dolor quisquam perferendis reiciendis quas iure. Temporibus quae repellat doloremque, mollitia, ipsa enim earum ducimus blanditiis harum voluptatibus, adipisci quisquam inventore!
-    Porro animi labore rem hic distinctio ipsam id tempora. Ex aperiam maxime adipisci quia consequuntur, optio neque cumque accusamus ipsam, assumenda amet ipsa ducimus, blanditiis impedit quasi nisi est? Numquam.
-    Cupiditate non cum facere reprehenderit iste vitae nam laboriosam fugit quaerat exercitationem earum, ducimus deserunt quisquam ratione hic ab voluptatibus, nobis dignissimos et. Blanditiis, quidem dolorem voluptatem laboriosam dolore explicabo?
-    Ex maiores numquam repudiandae vero inventore labore quibusdam quis, magnam officiis officia adipisci esse similique corrupti totam enim ab sit, atque voluptates, ad voluptatem nemo dolor ipsam blanditiis nostrum. Perferendis!
-    Dolores voluptatem quae ad similique laboriosam tempore esse alias sint placeat sapiente minima maxime architecto, quidem suscipit quaerat nemo eum modi, tenetur mollitia dignissimos quasi repellat. Eos minima culpa a.
-    Fuga, illo? Commodi vero labore dolor, architecto repudiandae ut ratione mollitia nihil nemo illum voluptatum voluptatem laudantium doloribus quod reprehenderit optio exercitationem, perferendis accusamus aperiam nulla voluptatibus impedit beatae quis.
-    Nihil iusto error vero dicta, enim rem debitis? Molestias ducimus totam blanditiis nemo ab autem nulla, itaque porro odit non aut, alias nisi quaerat quod laboriosam culpa qui eos sed?
-    Repellat, fugit. Aliquam saepe nam veniam veritatis quos laboriosam, explicabo quis tempora! Quos nobis vitae, cum corrupti quaerat ipsum magnam commodi qui unde amet fuga voluptas autem, temporibus laboriosam. Doloribus.
-    Ipsum adipisci a numquam minus praesentium, omnis ipsa ducimus nobis doloremque. Aut, id optio! Quidem fugit placeat, expedita ipsa beatae maiores reiciendis architecto, nesciunt officiis culpa asperiores facere, nam temporibus.
-    Magni iste atque itaque, provident libero commodi iure fuga modi praesentium illum unde laboriosam temporibus quia quidem quae, dicta numquam harum voluptates rerum veniam ab? Aut maiores consequatur voluptatum nostrum?
-    Amet earum nihil, vel eius beatae magni labore asperiores modi, ullam ab vero. Molestias ex voluptatum vero ipsum expedita alias fuga, aspernatur exercitationem corporis repellat velit excepturi nostrum aliquid nulla.
-    Fugit ducimus maiores repellat deserunt veritatis perspiciatis, porro architecto aspernatur. Recusandae voluptatibus velit explicabo, reiciendis eligendi quia, tempora consequatur natus soluta tempore voluptate excepturi voluptatum alias libero repellat! Nisi, expedita.
-    Omnis mollitia nihil asperiores! Excepturi libero sapiente, debitis voluptatum tempora doloremque eos exercitationem repellendus laudantium accusamus odit, facere quae ab nemo aperiam laborum eum vero, praesentium nobis ex esse sit?
-    Nesciunt, quisquam rem vel ratione optio illum officia inventore quia suscipit eum minima provident aperiam sunt maxime dolor sit architecto, distinctio, unde iusto doloremque eius. In dolor eos libero laboriosam.
-    Dolorum totam tempora suscipit culpa a, blanditiis natus perferendis reprehenderit ratione, corporis eligendi, debitis quis ipsa delectus error quidem distinctio iste nesciunt eius harum repudiandae autem! Voluptatum aut totam deleniti!
-    Nam similique placeat laudantium ipsum. Modi perspiciatis cupiditate ullam laboriosam, et molestias alias corrupti natus dolor placeat iusto magni, assumenda cum recusandae! Esse voluptates illo nam cum, facilis asperiores harum.
-    Mollitia, facilis eaque odio, aspernatur rem obcaecati quis consequatur sequi nihil asperiores libero hic veritatis quasi. Porro optio laboriosam cumque doloremque rerum ducimus, excepturi numquam deserunt odit? Ut, cupiditate nihil?</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
